--- a/bootstrap4.0.0/index.html
+++ b/bootstrap4.0.0/index.html
@@ -55,7 +55,7 @@
 
       <div class="starter-template">
         <h1>Bootstrap starter template</h1>
-        <p class="lead">Ye.<br> Test.</p>
+        <p class="lead">CYNTIA.<br> Test.</p>
       </div>
 
     </main><!-- /.container -->
